@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.8">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.9">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
     <import addon="script.module.inputstreamhelper" version="0.3.3" />
     <import addon="script.module.six" version="1.15.0"/>
     <import addon="script.module.kodi-six" version="0.1.3"/>
-    <import addon="context.otaku" version="0.0.6"/>
+    <import addon="context.otaku" version="0.0.7"/>
     <import addon="script.otaku.themepak" version="0.0.7"/>
   </requires>
   <extension library="default.py" point="xbmc.python.pluginsource">
@@ -24,9 +24,13 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.8 [20230130]:
-- Added animix search fallback
-- Handle error when anilist title is null
+Changelog 0.3.9 [20230202]:
+- Added New Setting "Preffed Source" for Preferences
+- Added New Setting "Set Delay in Seconds Before Showing Dialog" for Skip Intro
+- Removed "Seperate Subs and Dubs" 
+- Removed "Set content types"
+- Removed "Hide Dub/Sub"
+- Removed "Season Correction" 
     </news>
   </extension>
 </addon>
